--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "http-server": "^0.12.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
